--- a/README
+++ b/README
@@ -1,24 +1,14 @@
-Thank you for using the OXID eShop!
+Mit diesem Modul wird die TRUSTED SHOPS Bewertungsgrafik auf dem lokalen Server gecached.
 
-This software is written in PHP + MySQL and runs platform independent on Apache webservers.
-You can check the system requirements here (dependent from your edition): 
-http://www.oxid-esales.com/en/products/facts/oxid-eshop-enterprise-edition/system-requirements.html
-http://www.oxid-esales.com/en/products/facts/oxid-eshop-professional-edition/system-requirements.html
-http://www.oxid-esales.com/en/products/facts/oxid-eshop-community-edition/system-requirements.html
+Die Einbindung erfolgt mittels folgendem WIDGET Code im Template an der gewünschten Stelle:
+[{oxid_include_widget cl="dh_trustedshoplogo" nocookie=1 noscript=1}]
+
 
 Installation:
 =============
-- unzip the downloaded file and upload it to your webserver via FTP
-- create a blank database
-- point your browser to http://www.yourshop.com and follow the instructions of the installation script
+- Upload in das Modules Verzeichnis vom Shop
+- MODUL Einstellungen -> Trusted Shops ID eingeben
+- An die gewünschte Stelle im Template [{oxid_include_widget cl="dh_trustedshoplogo" nocookie=1 noscript=1}]
 
-See more detailled installation instructions in our manual:
-http://www.oxid-esales.com/en/support-services/documentation-and-help/oxid-eshop/installation.html
 
-In case of any difficulties feel free to visit our community support forums at
-http://forum.oxid-esales.com/?langid=1
-
-Have fun with your OXID eShop!
-
-The OXID team
 This file was modified by JetBrains PhpStorm 6.0.2 for binding GitHub repository
