--- a/README
+++ b/README
@@ -10,5 +10,4 @@ Installation:
 - MODUL Einstellungen -> Trusted Shops ID eingeben
 - An die gewünschte Stelle im Template [{oxid_include_widget cl="dh_trustedshoplogo" nocookie=1 noscript=1}]
 
-
-This file was modified by JetBrains PhpStorm 6.0.2 for binding GitHub repository
+Dennis / koffer-direkt.de
